chore: Upgrade and refactor related configurations - Spring-Boot 2.7.7 -> 3.0.4 - Refactor     - SpringSecurity - Remove     - spring-cloud-starter-sleuth(use micrometer-tracing instead)     - validation-api(use jakarta.validation-api instead) - Add     - StringUtil     - TypesUtil     - ListUtil     - logback-spring.xml - README.md changes